--- a/someone/index.html
+++ b/someone/index.html
@@ -3,28 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+
     <title>썸원</title>
-<style>
-
-    * {
-        margin:0px;
-        padding:0px;
-    }
-
-    #home {
-        width: 1300px;
-        height: 656px;
-        background-color: rgb(255, 209, 232);
-        display:flex;
-        justify-content: center;
-        align-items: center;
-    }
-</style>
 </head>
 <body>
     <div id="home">
-        <h1>SomeOne</h1>
-        <h2>사랑하는 사람의 마음이 궁금해?</h2>
+        <div>
+            <h1>SomeOne</h1>
+            <h2>사랑하는 사람의 마음이 궁금해?</h2>
+        </div>
         <img src="images/home.jpg" alt="홈이미지">
     </div>
 </body>
