--- a/someone/index.html
+++ b/someone/index.html
@@ -16,7 +16,7 @@
         <div id="home_login">
             <input type="text" placeholder="아이디"><br>
             <input type="password" placeholder="비밀번호"><br>
-            <button type="button">로그인</button><br>
+            <button type="button" onclick="location.href='main.html';">로그인</button><br>
             <button id="btn2" type="button" onclick="location.href='join.html';">회원가입</button>
         </div>  
     </div>
