--- a/someone/question_list.html
+++ b/someone/question_list.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
-    <title>메인화면</title>
+    <link rel="stylesheet" href="question_list.css">
+    <title>질문 작성하기</title>
 </head>
 <body>
     <div class="home">
@@ -16,18 +16,19 @@
                     우수민님 방문을 환영해요!
                 </div>
             </div>
+            <div>
                 <a href="question.html">❤️ 질문 작성하기</a><br>
                 <a href="question_list.html">🧡 질문 목록보기</a><br>
                 <a href="connect.html">💛 연결 및 해제하기</a><br>
-                <a href="email.html">💚 불편 사항 메일 보내기</a><br>
+                <a href="email.html">💚 불편 사항 메일 보내기</a><br>   
+            </div>
             
                 <button id="btn1" onclick="location.href='index.html';">로그아웃</button>
                 <button id="btn2" onclick="join_out()">회원탈퇴</button>
         </div>
         <div class="realize">
-            <img src="images/questionface.png" alt="메인화면">
-            <h2>&lt;2024년 1월 21일&gt; 질문이 생성되지 않았습니다.</h2><br><br>
-            <button id="click_question" onclick="click_question()">질문 받기</button>
+            <h1>List</h1>
+            
         </div>
     </div>
 <script>
@@ -39,10 +40,6 @@
             alert('탈퇴가 취소 되었습니다.');
             location.reload(true);
         }
-    }
-
-    function click_question(){
-        alert('상대방과 연결 되지 않았어요!\n[연결 및 해제하기]에서 연결해주세요.')
     }
 
 </script>
